[project]
name="vounofasaioi"
version="0.1.0"
requires-python= ">=3.13"
dependencies= [
    "pydantic",
    "pydantic[email]",
    "sqlalchemy",
    "pymysql",
    "cryptography",
    "dotenv",
    "fastapi",
    "uvicorn",
    "dateutils",
    "icecream"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black[jupyter]",
    "isort",
    "flake8",
    "flake8-bugbear",
    "flake8-builtins",
    "flake8-comprehensions",
    "flake8-eradicate",
    "flake8-implicit-str-concat",
    "flake8-print",
    "pep8-naming",
    "pre-commit",
    "commitizen",
    "jupyter",
]

[tool.black]
line-length = 100
target-version = ['py313']
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |\.json
  |\.md
  |\.venv
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["src"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version"
]

[tool.setuptools.packages.find]
where = ["src"]