[tool.poetry]
name = "vounofasaioi"
version = "0.1.0"
packages = [
    { include = "*", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
pydantic = { version = "2.11.7", extras = ["email"] }
sqlalchemy = "2.0.43"
pymysql = "1.1.1"
cryptography = "45.0.6"
python-dotenv = "1.1.1"
fastapi = { version = "0.116.1", extras = ["all"] }
uvicorn = "0.35.0"
dateutils = "0.6.12"
icecream = "2.1.6"
passlib = {extras = ["argon2"], version = "^1.7.4"}
pyjwt = "^2.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.1"
black = { version = "25.1.0", extras = ["jupyter"] }
isort = "6.0.1"
flake8 = "7.3.0"
flake8-bugbear = "24.12.12"
flake8-builtins = "2.5.0"
flake8-comprehensions = "3.16.0"
flake8-eradicate = "1.5.0"
flake8-implicit-str-concat = "0.5.0"
flake8-print = "5.0.0"
pep8-naming = "0.15.1"
pre-commit = "4.3.0"
commitizen = "4.8.3"
jupyter = "1.1.1"

[tool.black]
line-length = 100
target-version = ['py313']
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |\.json
  |\.md
  |\.venv
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["src"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version"
]